Bug 461239 - Ctrl+Arrow key seems to shift by bytes rather than words for certain Unicode characters
Summary: Ctrl+Arrow key seems to shift by bytes rather than words for certain Unicode ...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 21.12.3
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-31 11:35 UTC by ask4support
Modified: 2022-10-31 18:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
A sample file (36 bytes, text/plain)
2022-10-31 11:35 UTC, ask4support
Details
An archive with a UTF-8 sample file (207 bytes, application/zip)
2022-10-31 11:39 UTC, ask4support
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ask4support 2022-10-31 11:35:00 UTC
SUMMARY
***
NOTE: If you are reporting a crash, please try to attach a backtrace with debug symbols.
See https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports
***


STEPS TO REPRODUCE
1. Insert a Unicode-formatted text
2. Press ctrl + left/right arrow

OBSERVED RESULT
Moving by a single letter requires two presses, selecting with ctrl + shift + arrow results in half of the letter being highlighted. 

EXPECTED RESULT
Moving to the next word.

SOFTWARE/OS VERSIONS
Operating System: Kubuntu 22.04
KDE Plasma Version: 5.24.4
KDE Frameworks Version: 5.92.0
Qt Version: 5.15.3
Kernel Version: 5.15.0-43-generic (64-bit)
Graphics Platform: X11
Processors: 16 × AMD Ryzen 7 4800H with Radeon Graphics
Memory: 15.0 GiB of RAM
Graphics Processor: AMD RENOIR

ADDITIONAL INFORMATION
Comment 1 ask4support 2022-10-31 11:35:33 UTC
Created attachment 153351 [details]
A sample file
Comment 2 ask4support 2022-10-31 11:37:41 UTC
Comment on attachment 153351 [details]
A sample file

𝗺𝗮𝘆∕𝗺𝗶𝗴𝗵𝘁
Comment 3 ask4support 2022-10-31 11:39:56 UTC
Created attachment 153352 [details]
An archive with  a UTF-8 sample file
Comment 4 Bug Janitor Service 2022-10-31 12:38:07 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/ktexteditor/-/merge_requests/438
Comment 5 Christoph Cullmann 2022-10-31 18:14:53 UTC
Git commit be27222ae47e81733d340291bfa4b9544f03f26f by Christoph Cullmann, on behalf of Waqar Ahmed.
Committed on 31/10/2022 at 18:14.
Pushed by cullmann into branch 'master'.

CamelCursor: Improve complex unicode handling

M  +4    -1    autotests/src/camelcursortest.cpp
M  +15   -3    src/view/kateviewinternal.cpp

https://invent.kde.org/frameworks/ktexteditor/commit/be27222ae47e81733d340291bfa4b9544f03f26f