CamelCursor: Improve complex unicode handling

BUG: 461239